syntax = "proto3";

package webhook;

option go_package = "toxictoast/services/webhook-service/api/proto;webhook";

import "google/protobuf/timestamp.proto";

// ============================================================================
// Webhook Management Service
// ============================================================================

service WebhookManagementService {
  rpc CreateWebhook(CreateWebhookRequest) returns (WebhookResponse);
  rpc GetWebhook(GetWebhookRequest) returns (WebhookResponse);
  rpc ListWebhooks(ListWebhooksRequest) returns (ListWebhooksResponse);
  rpc UpdateWebhook(UpdateWebhookRequest) returns (WebhookResponse);
  rpc DeleteWebhook(DeleteWebhookRequest) returns (DeleteWebhookResponse);
  rpc ToggleWebhook(ToggleWebhookRequest) returns (WebhookResponse);
  rpc RegenerateSecret(RegenerateSecretRequest) returns (WebhookResponse);
  rpc TestWebhook(TestWebhookRequest) returns (TestWebhookResponse);
}

// ============================================================================
// Delivery Service
// ============================================================================

service DeliveryService {
  rpc GetDelivery(GetDeliveryRequest) returns (DeliveryResponse);
  rpc ListDeliveries(ListDeliveriesRequest) returns (ListDeliveriesResponse);
  rpc RetryDelivery(RetryDeliveryRequest) returns (RetryDeliveryResponse);
  rpc DeleteDelivery(DeleteDeliveryRequest) returns (DeleteDeliveryResponse);
  rpc CleanupOldDeliveries(CleanupOldDeliveriesRequest) returns (CleanupOldDeliveriesResponse);
  rpc GetQueueStatus(GetQueueStatusRequest) returns (GetQueueStatusResponse);
}

// ============================================================================
// Messages
// ============================================================================

message Webhook {
  string id = 1;
  string url = 2;
  string secret = 3;
  repeated string event_types = 4;
  string description = 5;
  bool active = 6;
  int32 total_deliveries = 7;
  int32 success_deliveries = 8;
  int32 failed_deliveries = 9;
  google.protobuf.Timestamp last_delivery_at = 10;
  google.protobuf.Timestamp last_success_at = 11;
  google.protobuf.Timestamp last_failure_at = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

message Delivery {
  string id = 1;
  string webhook_id = 2;
  string event_id = 3;
  string event_type = 4;
  string event_payload = 5;
  DeliveryStatus status = 6;
  int32 attempt_count = 7;
  google.protobuf.Timestamp next_retry_at = 8;
  google.protobuf.Timestamp last_attempt_at = 9;
  string last_error = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message DeliveryAttempt {
  string id = 1;
  string delivery_id = 2;
  int32 attempt_number = 3;
  string request_url = 4;
  int32 response_status = 5;
  string response_body = 6;
  bool success = 7;
  string error_message = 8;
  int32 duration_ms = 9;
  google.protobuf.Timestamp created_at = 10;
}

enum DeliveryStatus {
  DELIVERY_STATUS_UNSPECIFIED = 0;
  DELIVERY_STATUS_PENDING = 1;
  DELIVERY_STATUS_SUCCESS = 2;
  DELIVERY_STATUS_FAILED = 3;
  DELIVERY_STATUS_RETRYING = 4;
}

// ============================================================================
// Webhook Management Requests/Responses
// ============================================================================

message CreateWebhookRequest {
  string url = 1;
  string secret = 2;
  repeated string event_types = 3;
  string description = 4;
}

message WebhookResponse {
  Webhook webhook = 1;
}

message GetWebhookRequest {
  string id = 1;
}

message ListWebhooksRequest {
  int32 limit = 1;
  int32 offset = 2;
  bool active_only = 3;
}

message ListWebhooksResponse {
  repeated Webhook webhooks = 1;
  int64 total = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message UpdateWebhookRequest {
  string id = 1;
  string url = 2;
  string secret = 3;
  repeated string event_types = 4;
  string description = 5;
  bool active = 6;
}

message DeleteWebhookRequest {
  string id = 1;
}

message DeleteWebhookResponse {
  bool success = 1;
  string message = 2;
}

message ToggleWebhookRequest {
  string id = 1;
  bool active = 2;
}

message RegenerateSecretRequest {
  string id = 1;
}

message TestWebhookRequest {
  string id = 1;
}

message TestWebhookResponse {
  bool success = 1;
  string message = 2;
  string delivery_id = 3;
}

// ============================================================================
// Delivery Requests/Responses
// ============================================================================

message GetDeliveryRequest {
  string id = 1;
}

message DeliveryResponse {
  Delivery delivery = 1;
  repeated DeliveryAttempt attempts = 2;
}

message ListDeliveriesRequest {
  string webhook_id = 1;
  DeliveryStatus status = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message ListDeliveriesResponse {
  repeated Delivery deliveries = 1;
  int64 total = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message RetryDeliveryRequest {
  string id = 1;
}

message RetryDeliveryResponse {
  bool success = 1;
  string message = 2;
}

message DeleteDeliveryRequest {
  string id = 1;
}

message DeleteDeliveryResponse {
  bool success = 1;
  string message = 2;
}

message CleanupOldDeliveriesRequest {
  int32 older_than_days = 1;
}

message CleanupOldDeliveriesResponse {
  int32 deleted_count = 1;
  string message = 2;
}

message GetQueueStatusRequest {}

message GetQueueStatusResponse {
  int32 delivery_queue_size = 1;
  int32 retry_queue_size = 2;
}
